--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
 
-       <iframe src="https://docs.google.com/document/d/10AA3jCSPg8DAijuPl9QlOH79hw_QQWRIBB6RRnk0QDI/pub?embedded=true"
+       <iframe src="https://docs.google.com/document/d/10AA3jCSPg8DAijuPl9QlOH79hw_QQWRIBB6RRnk0QDI/pub"
                
          style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" ></iframe>
 
