--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Elementos de programación orientada a objetos</title>
+        <title>Lenguajes de programación orientados a objetos</title>
 
       
 
