--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
         <script src="js/jquery.js"></script>
         <script src="js/tether.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/d3.js"></script>
        
     </body>
 </html>
