--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -21,6 +21,12 @@ and open the template in the editor.
         <script src="js/tether.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/d3.js"></script>
-       
+        <script>
+            $("#saludar").click(function(){
+                $.get("/hola", function(datos){
+                  console.log(datos);  
+                });
+            });
+        </script>
     </body>
 </html>
