--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -13,20 +13,6 @@ and open the template in the editor.
         
     </head>
     <body>
-        <h1>Hola</h1>
-        <p>Bienvenido</p>
-        <button id="saludar" class="btn btn-success">Saludar</button>
-        <p id="saludo"></p>
-        <script src="js/jquery.js"></script>
-        <script src="js/tether.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/d3.js"></script>
-        <script>
-            $("#saludar").click(function(){
-                $.get("/hola", function(datos){
-                  console.log(datos);  
-                });
-            });
-        </script>
+        <p>Algo</p>
     </body>
 </html>
