--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -9,10 +9,19 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        
+     <!--este es un comentario en html
+      primero cargamos los estilos de cascada-->
+     <link rel="stylesheet" href="css/bootstrap.css">  
     </head>
     <body>
-        <p>Algo</p>
+        <h1>Juan Carlos </h1>
+        <div id="algo"></div>
+        <button id="boton1" class="btn btn-primary">Mi primer boton</button>
+    <!--hasta abajo antes del cierre de body se cargan los scripts -->  
+    <script src="js/jquery.js"></script>
+    <script src="js/tether.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/primero.js"></script>
+    
     </body>
 </html>
