--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -17,11 +17,20 @@ and open the template in the editor.
         <h1>Juan Carlos </h1>
         <div id="algo"></div>
         <button id="boton1" class="btn btn-primary">Mi primer boton</button>
+        <h2>Formulario para guardar una direccion</h2>
+ 
+        <input type="text" placeholder="Numero" id="numero">
+        <input type="text" placeholder="calle" id="calle">
+        <input type="text" placeholder="cp" id="cp">
+        <input type="text" placeholder="Municipio" id="municipio">
+        <button id="guardarDireccion"> Guardar direccion</button>
+      
     <!--hasta abajo antes del cierre de body se cargan los scripts -->  
     <script src="js/jquery.js"></script>
     <script src="js/tether.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/primero.js"></script>
+    <script src="js/direccion.js"></script>
     
     </body>
 </html>
