--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,6 +18,11 @@ and open the template in the editor.
         <div id="algo"></div>
         <button id="boton1" class="btn btn-primary">Mi primer boton</button>
         <h2>Oprime el boton para guardar una direccion</h2>
+        <input type="text" placeholder="numero" id="numero">
+        <input type="text" placeholder="calle" id="calle">
+        <input type="text" placeholder="cp" id="cp">
+        <input type="text" placeholder="municipio" id="municipio">
+        
   <button id="guardarDireccion" class="btn btn-danger">Guardar direccion</button>
       
     <!--hasta abajo antes del cierre de body se cargan los scripts -->  
