--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -22,8 +22,21 @@ and open the template in the editor.
         <input type="text" placeholder="calle" id="calle">
         <input type="text" placeholder="cp" id="cp">
         <input type="text" placeholder="municipio" id="municipio">
-        
-  <button id="guardarDireccion" class="btn btn-danger">Guardar direccion</button>
+        <br>
+  <button id="guardarDireccion" class="btn btn-primary">Guardar direccion</button>
+  
+  
+  <h2>Seccion 2 buscar por id, actualizar  y borrar</h2> 
+  <button id="buscarPorId" class="btn btn-success">Buscar por id</button>
+  <br>
+        <input type="text" placeholder="id" id="id">
+        <input type="text" placeholder="numero" id="numero2">
+        <input type="text" placeholder="calle" id="calle2">
+        <input type="text" placeholder="cp" id="cp2">
+        <input type="text" placeholder="municipio" id="municipio2">
+        <br>
+        <button id="actualizar" class="btn btn-primary">Actualizar</button>
+        <button id="borrar" class="btn btn-danger">Borrar</button>
       
     <!--hasta abajo antes del cierre de body se cargan los scripts -->  
     <script src="js/jquery.js"></script>
