--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,50 +1,14 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!--este es un comentario en html
-      primero cargamos los estilos de cascada-->
-     <link rel="stylesheet" href="css/bootstrap.css">  
-    </head>
-    <body>
-        <h1>Juan Carlos </h1>
-        <div id="algo"></div>
-        <button id="boton1" class="btn btn-primary">Mi primer boton</button>
-        <h2>Oprime el boton para guardar una direccion</h2>
-        <input type="text" placeholder="numero" id="numero">
-        <input type="text" placeholder="calle" id="calle">
-        <input type="text" placeholder="cp" id="cp">
-        <input type="text" placeholder="municipio" id="municipio">
-        <br>
-  <button id="guardarDireccion" class="btn btn-primary">Guardar direccion</button>
-  
-  
-  <h2>Seccion 2 buscar por id, actualizar  y borrar</h2> 
-  <button id="buscarPorId" class="btn btn-success">Buscar por id</button>
-  <br>
-        <input type="text" placeholder="id" id="id">
-        <input type="text" placeholder="numero" id="numero2">
-        <input type="text" placeholder="calle" id="calle2">
-        <input type="text" placeholder="cp" id="cp2">
-        <input type="text" placeholder="municipio" id="municipio2">
-        <br>
-        <button id="actualizar" class="btn btn-primary">Actualizar</button>
-        <button id="borrar" class="btn btn-danger">Borrar</button>
-      
-    <!--hasta abajo antes del cierre de body se cargan los scripts -->  
-    <script src="js/jquery.js"></script>
-    <script src="js/tether.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/primero.js"></script>
-    <script src="js/direccion.js"></script>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>BimestralAngular</title>
+  <base href="/">
 
-    
-    </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
